# python-flask-api-boilerplate

./: .dockerignore  .gitignore  Dockerfile  config.py  makefile  pyproject.toml
message-service/: Chart.yaml  values.yaml
message-service/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
message-service/templates/tests/: test-connection.yaml
ops/: deployment.yaml  service.yaml
ops/helm/: values.yaml
ops/helm/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml
src/: __init__.py  app.py  config.py  routes.py
src/controller/: budget_category.py  budgetbox.py  user.py
src/errors/: __init__.py  errors.py
src/model/: budget_categorie.py  budgetbox.py  user.py
src/models/: budget_categorie.py  budget_category.py  budgetbox.py  entity.py  user.py
src/routes/: __init__.py  budget_category.py  budgetbox.py  service_health.py  user.py
src/utility/: __init__.py  db_store.py
test/integration/: user_test.py
test/unit/: db_store_test.py
