[tool.poetry]
name = "python-rest-api-boilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
